tests/tmytests/bad/two_dim_arr_expr.lat
int main() {
    new int[][2];
    return 0;
}